--- a/app/templates/_index.htm
+++ b/app/templates/_index.htm
@@ -84,7 +84,7 @@
 			</div>
 		</div>
 
-		<div class="col-lg-9">
+		<div id="content" class="col-lg-9">
 			~:block('body')~
 			~:endblock()~
 		</div>
