--- a/app/features/Time/templates/Simple.htm
+++ b/app/features/Time/templates/Simple.htm
@@ -1,3 +1,6 @@
-<div style="float: right">
-	~~strftime(:raw($format), $time)~
+<div class="well well-sm" style="float: right">
+	<small id="feature_time" data-seconds="~~$seconds~">
+		
+	</small>
 </div>
+
