--- a/app/templates/_Base.htm
+++ b/app/templates/_Base.htm
@@ -22,12 +22,29 @@
 					<a class="navbar-brand" href="#">Morrow PHP Framework</a>
 				</div>
 
-				<div class="navbar-collapse">
+				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
-						<li ~if (!:raw($show_protected_and_private)):~class="active"~endif~><a href="~~:url(:raw($page.path.relative), array('show_protected_and_private' => ''))~" title="Shows only public members and methods">Enduser view</a></li>
-						<li ~if (:raw($show_protected_and_private)):~class="active"~endif~><a href="~~:url('', array('show_protected_and_private' => '1'))~" title="Shows all members and methods">Developer view</a></li>
+						<li><a href="~~:url('page/changelog')~">Changelog</a></li>
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Views <span class="caret"></span></a>
+							<ul class="dropdown-menu" role="menu">
+								<li ~if (!:raw($show_protected_and_private)):~class="active"~endif~>
+									<a href="~~:url(:raw($page.path.relative), array('show_protected_and_private' => ''))~" title="Shows only public members and methods">
+										Enduser view<br />
+										<small>Hides private and protected items</small>
+									</a>
+								</li>
+								<li ~if (:raw($show_protected_and_private)):~class="active"~endif~>
+									<a href="~~:url('', array('show_protected_and_private' => '1'))~" title="Shows all members and methods">
+										Developer view<br />
+										<small>Shows all items</small>
+									</a>
+								</li>
+							</ul>
+						</li>
 					</ul>
 				</div>
+
 			</nav>
 
 		</div>
@@ -96,6 +113,8 @@
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/prism/0.0.1/prism.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/collapse.min.js"></script>
 <script src="javascript/default.js"></script>
 
 </body>
