--- a/app/templates/_Base.htm
+++ b/app/templates/_Base.htm
@@ -29,13 +29,13 @@
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Views <span class="caret"></span></a>
 							<ul class="dropdown-menu" role="menu">
 								<li ~if (!:raw($show_protected_and_private)):~class="active"~endif~>
-									<a href="~~:url(:raw($page.path.relative), array('show_protected_and_private' => ''))~" title="Shows only public members and methods">
+									<a href="~~:url(:raw($page.path.relative), ['show_protected_and_private' => ''])~" title="Shows only public members and methods">
 										Enduser view<br />
 										<small>Hides private and protected items</small>
 									</a>
 								</li>
 								<li ~if (:raw($show_protected_and_private)):~class="active"~endif~>
-									<a href="~~:url('', array('show_protected_and_private' => '1'))~" title="Shows all members and methods">
+									<a href="~~:url('', ['show_protected_and_private' => '1'])~" title="Shows all members and methods">
 										Developer view<br />
 										<small>Shows all items</small>
 									</a>
