--- a/app/templates/elements/type.htm
+++ b/app/templates/elements/type.htm
@@ -1,8 +1,8 @@
 <?php
-$replacements = array(
-	'|int$|' => 'integer',
-	'|bool$|' => 'boolean',
-);
+$replacements = [
+	'|int$|'	=> 'integer',
+	'|bool$|'	=> 'boolean',
+];
 
 $type = strtolower($type);
 $type = preg_replace(array_keys($replacements), $replacements, $type);
