--- a/app/templates/elements/visibility.htm
+++ b/app/templates/elements/visibility.htm
@@ -1,9 +1,9 @@
 <?php
-$labels = array(
-	'public' => 'label-success',
-	'protected' => 'label-warning',
-	'private' => 'label-error',
-);
+$labels = [
+	'public'	=> 'label-success',
+	'protected'	=> 'label-warning',
+	'private'	=> 'label-error',
+];
 ?>
 
 <span class="label ~~$labels[:raw($visibility)]~">~~:escape($visibility)~</span>
