Refactored \app\Features\Time

--- a/app/features/Time/templates/Simple.htm
+++ b/app/features/Time/templates/Simple.htm
@@ -1,5 +1,4 @@
-<div class="well well-sm" style="float: right">
-	<small id="feature_time" data-seconds="~~$seconds~">
-	</small>
+<div class="well well-sm">
+	Server time:
+	<span id="feature_time" data-seconds="~~$seconds~" data-time="~~$time~"></span>
 </div>
-
