--- a/app/templates/Home.htm
+++ b/app/templates/Home.htm
@@ -1,1 +1,51 @@
-~:extend('_Base')~
+<!doctype html>
+
+<html>
+<head>
+	<base href="~~:raw($page.base_href)~" />
+	<meta charset="utf-8" />
+
+	<title>Morrow PHP Framework</title>
+	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/prism/0.0.1/prism.min.css" />
+	<link rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+
+<div class="container">
+	
+	<div class="row">
+		<div class="col-lg-12">
+
+			<nav class="navbar navbar-default" role="navigation">
+				<div class="navbar-header">
+					<a class="navbar-brand" href="/">Morrow PHP Framework</a>
+				</div>
+
+				<div class="collapse navbar-collapse">
+					<ul id="navbar-right" class="nav navbar-nav navbar-right">
+					</ul>
+				</div>
+
+			</nav>
+
+		</div>
+	</div>
+
+	<div class="row">
+		<div id="sidebar" class="col-lg-3">
+		</div>
+
+		<div id="content" class="col-lg-9">
+		</div>
+	</div>
+</div>
+
+<script src="//cdnjs.cloudflare.com/ajax/libs/prism/0.0.1/prism.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/collapse.min.js"></script>
+<script src="javascript/default.js"></script>
+
+</body>
+</html>
