--- a/app/templates/Home.htm
+++ b/app/templates/Home.htm
@@ -45,7 +45,7 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/collapse.min.js"></script>
-<script src="javascript/default.js"></script>
+<script src="js/default.js"></script>
 
 </body>
 </html>
