--- a/app/templates/Home.htm
+++ b/app/templates/Home.htm
@@ -4,6 +4,7 @@
 <head>
 	<base href="~~:raw($page.base_href)~" />
 	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
 	<title>Morrow PHP Framework</title>
 	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css" />
@@ -13,16 +14,21 @@
 <body>
 
 <div class="container">
-	
 	<div class="row">
-		<div class="col-lg-12">
+		<div class="col-md-12">
 
 			<nav class="navbar navbar-default" role="navigation">
 				<div class="navbar-header">
-					<a class="navbar-brand" href="/">Morrow PHP Framework</a>
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-main">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					</button>
+      				<a class="navbar-brand" href="/">Morrow PHP Framework</a>
 				</div>
 
-				<div class="collapse navbar-collapse">
+				<div class="collapse navbar-collapse" id="navbar-main">
 					<ul id="navbar-right" class="nav navbar-nav navbar-right">
 					</ul>
 				</div>
@@ -33,18 +39,20 @@
 	</div>
 
 	<div class="row">
-		<div id="sidebar" class="col-lg-3">
+		<div id="sidebar" class="col-md-3 col-sm-12">
 		</div>
 
-		<div id="content" class="col-lg-9">
+		<div id="content" class="col-md-9 col-sm-12">
 		</div>
 	</div>
 </div>
 
+<div id="desktop-test" class="hidden-xs"></div>
+
 <script src="//cdnjs.cloudflare.com/ajax/libs/prism/0.0.1/prism.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/collapse.min.js"></script>
+<script id="collapse-plugin" src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/collapse.min.js"></script>
 <script src="js/default.js"></script>
 
 </body>
